Spotify_Data_Analysis_Using_Python.ipynb was updated.

--- a/Spotify_Data_Analysis_Using_Python.ipynb
+++ b/Spotify_Data_Analysis_Using_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Spotify_Data_Analysis_Using_Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMY70p4Jg6AJ3+Uiqy04/ka",
+      "authorship_tag": "ABX9TyOlQmCQT5AlYAff5y7TXS1R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,8 +88,8 @@
     {
       "cell_type": "code",
       "source": [
-        "CLIENT_ID = \"9d34b8069d904f5ba4f61acae38b51bd\"\n",
-        "CLIENT_SECRET = \"ac6e506431b4432b91c8a8b3a9e4f955\""
+        "CLIENT_ID = \"YOUR_CLIENT_ID\" # Burada Spotify Dashboad Üzerinden Aldığınız ID ve Secret'ı kullanmanız gerekmektedir. \n",
+        "CLIENT_SECRET = \"YOUR_CLIENT_SECRET\""
       ],
       "metadata": {
         "id": "nAucqvqnbV1u"
